# ePrint-IACR-PaperMyArchive

./: .gitignore
Enhanced_Enigma_Machine/: PaperCipherDemo.py  Paper_ZH-CN.md  ReproducibleCipher.cpp  ReproducibleCipher.py
iwt_research/: README.md  TODO.md  __init__.py  __main__.py  command_line.py  run_experiment.py  run_helpers.py
iwt_research/algorithm_api/: __init__.py  builtin_iwt_core.py  loader.py  protocols.py
iwt_research/alignment/: __init__.py  todo_alignment.py
iwt_research/analysis/: __init__.py  baseline_factory.py  baseline_models.py  baseline_protocol.py  bridge_calibration.py  multiple_comparisons.py  performance_budget.py  threat_model.py  tm1_scan.py  tm2_focused_probes.py  tm3_workflow.py
iwt_research/app/: __init__.py  analyze.py
iwt_research/ciphers/: __init__.py  protocols.py  runner_factory.py  toy_arx_cipher.py  toy_spn.py  toy_spn_vector.py
iwt_research/core/: __init__.py  atomic_trace.py  discrete_domain.py  domain.py  enhanced_state.py  ops_kernel.py  ops_trace.py  state.py  types.py
iwt_research/evidence/: __init__.py  extractor_family.py  map_utils.py  objects.py  schema_version.py  types.py
iwt_research/iwt_core/: BUILD.md  CMakeLists.txt  build.bat  build.sh  toolchain-mingw.cmake
iwt_research/iwt_core/include/iwt/: atomic_operations.hpp  baseline_run.hpp  binary_hypercube.hpp  collision_metrics.hpp  discrete_domain.hpp  high_dimensional.hpp  inversions.hpp  keystream_metrics.hpp  plugin_api.hpp  preflight.hpp  rho_analysis.hpp  sponge.hpp  structure_height.hpp  toy_arx_run.hpp  toy_spn_run.hpp  winding_metrics.hpp  winding_trajectory.hpp
iwt_research/iwt_core/src/: atomic_operations.cpp  baseline_run.cpp  binary_hypercube.cpp  bindings.cpp  collision_metrics.cpp  high_dimensional.cpp  inversions.cpp  keystream_metrics.cpp  rho_analysis.cpp  sponge.cpp  structure_height.cpp  toy_arx_run.cpp  toy_spn_run.cpp  winding_metrics.cpp  winding_trajectory.cpp
iwt_research/metrics/: __init__.py  non_degeneracy.py  observation_metrics.py  winding_metrics.py
iwt_research/metrics/evidence/: __init__.py  build_evidence.py  types.py
iwt_research/metrics/high_dimensional/: __init__.py  coupling.py  cycles.py  evidence.py  neighbor.py  reachability.py
iwt_research/metrics/permutation/: __init__.py  cycles.py
iwt_research/metrics/structure_height/: __init__.py  pbox_height.py  sbox_height.py
iwt_research/metrics/tangling/: __init__.py  inversions.py
iwt_research/metrics/trajectory/: __init__.py  aggregate.py  cross_domain.py  information_height.py  joint_value_height.py  snapshots.py
iwt_research/native/: README.md  __init__.py  capability.py  check_pyd_deps.bat  iwt_core.cp314-win_amd64.pyd
iwt_research/pipeline/: __init__.py  baseline_runner.py  block_core.py  block_runner.py  block_workflow.py  config.py  exhaustive_runner.py  lesion_runner.py  report_assembler.py  tm1_runner.py  types.py
iwt_research/projections/: __init__.py  projections.py  registry.py
iwt_research/report/: __init__.py  contracts.py  report_writer.py  schema_version.py
iwt_research/sampling/: __init__.py  seeded.py
iwt_research/secure_hash/: __init__.py  collision_metrics.py  rho_analysis.py  run_hash_experiment.py  toy_sponge.py
iwt_research/state_encoding/: __init__.py  scalar.py  vector.py
iwt_research/stream_cipher/: __init__.py  keystream_metrics.py  run_stream_experiment.py  toy_prg.py
iwt_research/utils/: __init__.py  event_summaries.py  stats.py
iwt_research/verify/: __init__.py  block_exhaustive.py  report_contracts.py  result.py  stream_hash.py  tm1.py  tm2.py  tm3.py
